# chess

./: .gitignore  BUILD.md  CHANGELOG.md  CMakeLists.txt  DEVELOPMENT.md  LICENSE  README.md  Todo.md  log.json
.cache/clangd/index/: header.c.D1D21F6958BCF12E.idx  header.h.DFAFEB29C483AD91.idx  main.c.071253EB4D77F3D8.idx
docs/: API.md  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  GETTING_STARTED.md  README.md
header/: game_logic.h  gui.h  header.h  pieces.h
scripts/: build.bat  run.bat  run.sh
src/: game_logic.c  gui.c  header.c  main.c  pieces.c
